地区选择的例子

--- a/ZXSToolDemo/ZXSToolDemo/Base.lproj/Main.storyboard
+++ b/ZXSToolDemo/ZXSToolDemo/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="ZXSHomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ZXSHomeViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="HomeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -27,6 +27,9 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EO0-Ot-dHT">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                                         <state key="normal" title="省市区选择"/>
+                                                        <connections>
+                                                            <action selector="areaButtonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wRV-wd-CXf"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
